# personal-chef-agent

./: README.md  pyproject.toml
conversations/: conversation_1.txt  conversation_8c504d60-efac-4c01-a8e5-41034340fcff.txt  conversation_9121c774-e300-4fb2-b631-def938071226.txt  conversation_multimodal_1.txt
docs/: multimodal-system-prompt.txt  system-prompt.txt
src/personal_chef/: multimodal_flow.py  text_flow.py  tools.py
